--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>TextCount</title>
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
     <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="index.js"></script>
   </head>
   <body>
@@ -18,7 +19,7 @@
         </div>
       </div>
       <div id="copied"></div>
-      <div id="display" onclick="copyToClipboard()"></div>
+      <div id="display" onclick="copyToClipboard()">0</div>
     </div>
   </body>
 </html>
