--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <textarea class="text" id="text" onkeyup="count()"></textarea>
       <div class="pretty p-switch p-fill">
         <input type="checkbox" id="include-spaces" onchange="count()">
-        <div class="state">
+        <div class="state p-primary">
           <label>Include spaces</label>
         </div>
       </div>
